Refactored course infrastructure